Removed unused assets and added BackgroundCheck plugin

--- a/assets/sass/_561up.scss
+++ b/assets/sass/_561up.scss
@@ -11,3 +11,19 @@ Header
 		padding: 0 0.5em;
 	}
 }
+
+/*--------------------------------------------------------------
+Work Page
+--------------------------------------------------------------*/
+.work-detail {
+	.content {
+		h4 {
+			font-size: 32px;
+			font-size: 3.2rem;
+		}
+		.cats {
+			font-size: 16px;
+			font-size: 1.6rem;
+		}
+	}
+}
