--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -81,6 +81,21 @@ Home Page
 }
 
 /*--------------------------------------------------------------
+Work Page
+--------------------------------------------------------------*/
+.work-detail {
+	.content {
+		h4 {
+			font-size: 24px;
+			font-size: 2.4rem;
+		}
+		.cats {
+			@include text_small;
+		}
+	}
+}
+
+/*--------------------------------------------------------------
 Work Single
 --------------------------------------------------------------*/
 .work-thumb-large {
