--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -102,3 +102,16 @@ Effects
 	transform: translateY(-50%);
 	top: 50%;
 }
+
+/* Effects */
+@mixin screen_effect($r, $g, $b, $opacity) {
+	&:before {
+		position: absolute;
+		content: "";
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba($r, $g, $b, $opacity);
+	}
+}
