--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 /* Fontello */
-$version: "59008170";
+$version: "89957711";
 @font-face {
 	font-family: 'fontello';
 	src: url('../fonts/fontello.eot?@{version}');
@@ -54,14 +54,18 @@ $version: "59008170";
 	/* Uncomment for 3D effect */
 	/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
+
 .icon-linkedin:before { content: '\e800'; } /* '' */
 .icon-menu:before { content: '\e801'; } /* '' */
 .icon-twitter:before { content: '\e802'; } /* '' */
 .icon-twitter-circled:before { content: '\e803'; } /* '' */
+.icon-home-outline:before { content: '\e804'; } /* '' */
 .icon-facebook:before { content: '\e805'; } /* '' */
 .icon-left-open-big:before { content: '\e806'; } /* '' */
 .icon-right-open-big:before { content: '\e807'; } /* '' */
+.icon-th-large:before { content: '\e808'; } /* '' */
 .icon-search-1:before { content: '\e809'; } /* '' */
+.icon-th-thumb-empty:before { content: '\e80a'; } /* '' */
 .icon-mail-circled:before { content: '\e80b'; } /* '' */
 .icon-phone-circled:before { content: '\e80c'; } /* '' */
 .icon-gplus:before { content: '\e80d'; } /* '' */
