--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,7 @@ Base
 @import "_mixins";
 @import "_fonts";
 @import "_base";
-@import "_plugins";
+//@import "_plugins";
 
 /*--------------------------------------------------------------
 Media Queries
