Set up home page slide area and Headroom.js

--- a/assets/sass/_561up.scss
+++ b/assets/sass/_561up.scss
@@ -12,6 +12,13 @@ Header
 	}
 }
 
+/* Slides */
+.slide-area_text {
+	h2 {
+		max-width: 60%;
+	}
+}
+
 /*--------------------------------------------------------------
 Work Page
 --------------------------------------------------------------*/
