--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -60,21 +60,15 @@ Home Page
 	padding: 64px 0;
 }
 
-/* Hero */
-.hero-callout {
+/* Slides */
+.slide-area_text {
 	h1 {
-		font-size: 56px;
-		font-size: 5.6rem;
+		font-size: 20px;
+		font-size: 2.0rem;
 	}
-	p {
-		font-size: 24px;
-		font-size: 2.4rem;
-	}
-}
-.hero-image {
-	img {
-		max-width: 450px;
-		margin-bottom: -230px;
+	h2 {
+		font-size: 84px;
+		font-size: 8.4rem;
 	}
 }
 
