--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -87,10 +87,12 @@ Home Page
 
 /* Slides */
 .slide-area {
-	height: 100%;
-	height: 100vh;
+	max-height: none;
 }
 .slide-area_text {
+	top: 50%;
+	bottom: auto;
+	margin-top: -1.5em;
 	h1 {
 		font-size: 20px;
 		font-size: 2.0rem;
@@ -119,6 +121,31 @@ Home Page
 			color: $link-color;
 		}
 	}
+}
+
+/* Services */
+.service {
+	padding-bottom: 0;
+}
+
+/* Work Items */
+.feat-work-item {
+	.cats {
+		display: block;
+		color: darken($border-color, 15%);
+		font-weight: 300;
+		a {
+			color: darken($border-color, 15%);
+			border-bottom: 1px dotted transparent;
+			&:hover {
+				border-color: darken($border-color, 15%);
+				@include animated;
+			}
+		}
+	}
+}
+.feat-work-img {
+	margin-bottom: 0;
 }
 
 /*--------------------------------------------------------------
