--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -86,6 +86,9 @@ Effects
 @mixin text_smaller {
 	font-size: 75%;
 }
+@mixin text_shadow($color) {
+	text-shadow: 3px 3px 5px $color;
+}
 
 /* Positioning */
 @mixin flip_horiz {
