--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -102,20 +102,17 @@ Global
 	background-size: cover;
 	background-position: 50% 50%;
 	&.has_bg {
-		@include screen_effect(255, 255, 255, 0.8);
+		@include screen_effect(0, 0, 0, 0.4);
+		color: white;
 		h1, .cats {
 			position: relative;
 			z-index: 300;
 		}
 		h1 {
-			text-shadow: 3px 3px 6px #333;
+			@include text_shadow(#222);
 		}
-		&.contrast {
-			color: white;
-			@include screen_effect(0, 0, 0, 0.6);
-			.cats, .cats a {
-				color: #AAA;
-			}
+		.cats, .cats a {
+			color: #AAA;
 		}
 	}
 	.cats, .cats a {
@@ -365,7 +362,10 @@ Home Page
 /* Slides */
 .slide-area {
 	position: relative;
-	height: 600px;
+	height: 100%;
+	height: 100vh;
+	min-height: 560px;
+	max-height: 650px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
@@ -373,9 +373,8 @@ Home Page
 }
 .slide-area_text {
 	position: absolute;
-	top: 50%;
+	bottom: 20%;
 	width: 100%;
-	margin-top: -1.5em;
 	color: white;
 	text-align: right;
 	h1, h2, .button {
@@ -385,6 +384,7 @@ Home Page
 	}
 	h1, h2 {
 		margin: 0 0 0.5em;
+		@include text_shadow(#222);
 	}
 	h1 {
 		font-size: 18px;
@@ -438,14 +438,17 @@ Home Page
 	z-index: 200;
 }
 .service {
+	padding-bottom: 1.0em;
 	p {
 		font-weight: 300;
+	}
+	&:last-of-type {
+		padding-bottom: 0;
 	}
 }
 .service-icon {
 	max-width: 75px;
 	max-height: 75px;
-	margin-bottom: 0.75em;
 }
 .service-title {
 	font-size: 20px;
@@ -465,17 +468,11 @@ Home Page
 }
 .feat-work-item {
 	.cats {
-		color: darken($border-color, 15%);
-		font-weight: 300;
-		a {
-			color: darken($border-color, 15%);
-			border-bottom: 1px dotted transparent;
-			&:hover {
-				border-color: darken($border-color, 15%);
-				@include animated;
-			}
-		}
+		display: none;
 	}
+}
+.feat-work-img {
+	margin-bottom: 0.5em;
 }
 .feat-work-info {
 	display: table-cell;
@@ -531,7 +528,7 @@ Home Page
 %contact-section {
 	text-align: center;
 	h2 {
-		margin-bottom: 0.375em;
+		margin: 0 0 0.375em;
 	}
 	p {
 		color: $body-light;
@@ -622,8 +619,10 @@ About Page
 /*--------------------------------------------------------------
 Contact Page
 --------------------------------------------------------------*/
-.contact-area {
-	padding-top: 1.5em;
+.contact-page {
+	.contact-area {
+		padding-top: 1.5em;
+	}
 }
 .contact-form {
 	margin-bottom: 3.0em;
