--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 /* Fontello */
-$version: "38781409";
+$version: "53197154";
 @font-face {
 	font-family: 'fontello';
 	src: url('../fonts/fontello.eot?@{version}');
@@ -65,6 +65,7 @@ $version: "38781409";
 .icon-right-open-big:before { content: '\e807'; } /* '' */
 .icon-th-large:before { content: '\e808'; } /* '' */
 .icon-search-1:before { content: '\e809'; } /* '' */
+.icon-cancel:before { content: '\e80a'; } /* '' */
 .icon-mail-circled:before { content: '\e80b'; } /* '' */
 .icon-phone-circled:before { content: '\e80c'; } /* '' */
 .icon-gplus:before { content: '\e80d'; } /* '' */
