--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -15,10 +15,10 @@ textarea {
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1.75;
+	@include font-smoothing(on);
 }
 
 h1, h2, h3, h4 {
-	@include antialiased;
 	font-family: $heading-font;
 }
 
@@ -54,7 +54,6 @@ button {
 }
 input[type="search"] {
 	-webkit-appearance: textfield;
-	@include antialiased;
 }
 input[type="submit"],
 button {
